# cn-financial-reports

./: .env.example  .gitignore  README.md  bse_client.py  cninfo_categories.json  cninfo_client.py  cnreport_database.py  cnreport_models.py  cnreport_tools.py  csrc_client.py  demand.md  financials_client.py  hk_stock_client.py  indicator_rules.json  indicators.md  indicators_client.py  indicators_csv_migration.py  indicators_extractors.py  indicators_models.py  industry_coverage.py  industry_taxonomy.py  llm_section_cache.py  migrate.py  ministry_stats_client.py  official_client_utils.py  pyproject.toml  report_cache.py  report_section_map.py  rules_db.py  rules_models.py  rules_skills.py  script_extractors.py  selfcheck.py  selfcheck_cache.py  server.py  sse_client.py  szse_client.py  test_bse_client.py  test_cnreport.py  test_concurrent_extract.py  (+11 more)
.claude/skills/fd-cnreport-pdf-scripts-by-type-creator/: SKILL.md
.claude/skills/fd-cnreport-pdf-scripts-creator/: SKILL.md
docs/: icbc_2023_indicator_locations.md  icbc_2023_indicator_positions.csv  icbc_2023_outline.json  indicators-coverage.csv  indicators-coverage.md  indicators-methodology.md  indicators_all_info.csv  indicators_lost.csv  indicators_position.csv  indicators_status.csv  indicators_status.md  industry_indicator_baseline.json  industry_rules_workflow.md  industry_seed_support.json  industry_taxonomy.json  report_section_map.json
openspec/changes/industry-financial-report-rules/: design.md  proposal.md  tasks.md
openspec/changes/multi-form-indicator-extract/: README.md  design.md  proposal.md  tasks.md
openspec/changes/optimize-llm-extraction-rules/: README.md  design.md  proposal.md  tasks.md
openspec/changes/optimize-llm-section-fetch/: design.md  proposal.md  tasks.md
openspec/changes/pydantic-llm-extraction-pipeline/: design.md  (+2 more)
scripts/: check_industry_coverage.py  compare_indicators_status.py  count_llm.py  debug_llm_extraction.py  extract_indicators.py  extract_indicators_by_position.py  extract_indicators_multiyear.py  generate_all_industry_rules.py  generate_rules_from_real_reports.py  industry_rules_dashboard.py  industry_support_report.py  list_industry_document_types.py  locate_indicators.py  map_indicators_to_report.py  migrate_indicators_csv.py  migrate_python_to_llm.py  migrate_rules_to_db.py  regress_out_bundles.py  rules_dashboard.py  seed_industry_rules.py  seed_missing_industry_rules.py  test_industry_rules.py  test_llm_extraction.py  test_python_extractors.py  verify_pypi_install.sh  verify_section_resolution.py
skills/fd-cnreport-llm-rules-creator/: SKILL.md
skills/fd-cnreport-pdf-full-scripts-creator/: SKILL.md
skills/fd-cnreport-pdf-llm-rules-creator/: SKILL.md
test_fixtures/: cninfo_hisannouncement.json  cninfo_hisannouncement_special.json  cninfo_topsearch.json  indicator_rules.sample.json
test_fixtures/llm_extract/: indicators_position.csv  llm_response_ok.json  llm_response_partial.json  rules.sample.json  section.txt
(+94 files in other folders)
