[project]
name = "cnreport-mcp"
version = "0.1.4"
description = "Chinese financial report MCP server — 31 Shenwan industry AI rule system, outline extraction, AI structured extraction, Elasticsearch store + search, industry rules dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pypdf>=4.0",
    "jsonschema>=4.0",
    "elasticsearch>=8.0",
    "akshare>=1.13",
    "pandas>=2.0",
    "pymupdf>=1.28.0",
]

[project.scripts]
cnreport-dashboard = "scripts.industry_rules_dashboard:start_dashboard"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "server",
    "cnreport_database",
    "cnreport_models",
    "cnreport_tools",
    "cninfo_client",
    "financials_client",
    "indicators_client",
    "indicators_extractors",
    "indicators_csv_migration",
    "report_cache",
    "llm_section_cache",
    "selfcheck",
    "selfcheck_cache",
    "migrate",
    "hk_stock_client",
]
